Change phrases: Locations have changed to Areas. Activity rooms have changed to Locations. Sleeping rooms have changed to housing
